--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,3 +62,67 @@ footer {
 header {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
 }
+
+.add-program {
+  &__card {
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.05);
+  }
+  &__custom-button {
+    width: 160px;
+    height: 120px;
+    font-size: 12px;
+    text-align: left;
+  }
+  &__days {
+    width: 200px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    input {
+      height: 40px;
+      text-align: center;
+    }
+    span {
+      height: 40px;
+    }
+  }
+  &__control {
+    width: 20px;
+    height: 20px;
+    color: $primary;
+    border: 1px solid $primary;
+    border-radius: 50%;
+    display: flex;
+    line-height: 1;
+    padding: 0;
+    background: #fff;
+    padding: -1px;
+    text-align: center;
+    justify-content: center;
+  }
+}
+
+.custom-control-label:before {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  left: -22px;
+  top: 6px;
+  border: 0;
+  box-shadow: none;
+}
+
+.custom-control-label:after {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid $primary;
+}
+
+.custom-control-label._checkbox:before,.custom-control-label._checkbox:after {
+  border-radius: 4px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
