--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,12 @@
 }
 
 .progress-tabs {
+  overflow: scroll;
+  min-height: 64px;
+  &__list {
+    overflow-x: scroll;
+    min-width: 700px;
+  }
   &__bar {
     border: 3px solid $primary;
     width: 100%;
@@ -59,8 +65,54 @@ footer {
   }
 }
 
-header {
+header, .header {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+  &__logo {
+    margin-right: 3rem;
+  }
+  .mobile-menu {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    .mobile-menu__close-button {
+      display: none;
+    }
+    @media (max-width: 1200px) {
+      transform: translateX(-100%);
+      transition: transform .3s ease;
+      position: fixed;
+      background: #fff;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+      flex-direction: column;
+      justify-content: center;
+      .mobile-menu__close-button {
+        display: block;
+        position: absolute;
+        top: 24px;
+        right: 48px;
+      }
+      &_active {
+        transform: translateX(0);
+      }
+      nav, .lk {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+  .burger {
+    display: none;
+    @media (max-width: 1200px) {
+      display: block;
+    }
+  }
 }
 
 .add-program {
