--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -84,7 +84,7 @@ $h3-font-size: 2rem;
 @import "bootstrap/scss/forms";
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/transitions";
-// @import "bootstrap/scss/dropdown";
+@import "bootstrap/scss/dropdown";
 // @import "bootstrap/scss/button-group";
 @import "bootstrap/scss/input-group"; // Requires forms
 @import "bootstrap/scss/custom-forms";
